# LeanEdge-RL

./: CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.cargo/: config.toml
.github/assets/: README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/benches/: matrix_ops.rs
core/src/: action.rs  env.rs  error.rs  ffi.rs  lib.rs  obs.rs  simd.rs
core/src/algorithms/: linear_fa.rs  mock.rs  mod.rs  tabular_q.rs  tiny_nn.rs
core/tests/: smoke.rs
cshim/: Cargo.toml  build.rs
cshim/cpp_tests/: CMakeLists.txt  smoke_test.cpp
cshim/include/: leanrl.hpp
cshim/src/: lib.rs
docs/: README.md  formal-verification.md
lean/: PolicySpec.lean  lakefile.lean
leanrl-bundle/: Cargo.toml
leanrl-bundle/src/: bundle.rs  main.rs  sbom.rs  signing.rs  tpm.rs
scripts/: verify-unsafe-allowlist.sh
