[workspace]
members = [
    "core",
    "cshim",
    "leanrl-bundle",
    "lake-packages/leanrl_export"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LeanEdge-RL Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/leanrl/leanedge-rl"
description = "Formally-verified, sub-millisecond RL runtime for safety-critical edge systems"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.8", optional = true }

# Testing and benchmarking
criterion = { version = "0.5", optional = true }
nextest = { version = "0.9", optional = true }

# Security and compliance
cargo-auditable = { version = "0.6", optional = true }

# FFI and system integration
libc = "0.2"

# SIMD and performance
packed_simd_2 = "0.3"

# Error handling
thiserror = "1.0"

# Logging (when std is available)
log = { version = "0.4", optional = true }

# Serialization for weights
bincode = { version = "1.3", optional = true }

# CLI tools
clap = { version = "4.4", features = ["derive"], optional = true }
zip = "0.6"
walkdir = "2.4"
toml = "0.8" 