[workspace]
members = [
    "core",
    "cshim",
    "leanrl-bundle",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LeanEdge-RL Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/leanrl/leanedge-rl"
description = "Formally-verified, sub-millisecond RL runtime for safety-critical edge systems"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.8" }

# Testing and benchmarking
criterion = { version = "0.5" }

# Security and compliance
cargo-auditable = { version = "0.6" }

# FFI and system integration
libc = "0.2"

# Error handling
thiserror = "1.0"

# Logging (when std is available)
log = { version = "0.4" }

# Serialization for weights
bincode = { version = "1.3" }

# CLI tools
clap = { version = "4.4", features = ["derive"] }
zip = "8.5"
walkdir = "2.4"
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
