[package]
name = "leanrl_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core RL runtime library - formally verified, no_std compatible"
readme = "../README.md"
documentation = "https://docs.rs/leanrl_core"
keywords = ["reinforcement-learning", "embedded", "no-std", "simd", "robotics"]
categories = ["science", "no-std", "embedded"]

[lib]
name = "leanrl_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["std"]
std = ["serde/std", "log/std"]
alloc = ["serde/alloc"]
simd_neon = []
simd_avx2 = []
serde = ["dep:serde"]
rayon = ["dep:rayon", "std"]
test-utils = ["std", "serde"]

[dependencies]
# Core dependencies
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
libc = { workspace = true }

# Logging (when std is available)
log = { workspace = true, optional = true }

# Serialization for weights
bincode = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "matrix_ops"
harness = false
