[package]
name = "leanrl_cshim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C/C++ integration re-exports and headers for LeanEdge-RL"

[lib]
name = "leanrl_cshim"
crate-type = ["rlib"]

[dependencies]
leanrl_core = { path = "../core" }

[features]
default = []
eigen = []
tensorrt = []
