[package]
name = "leanrl-bundle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Compliance bundle generator for LeanEdge-RL"

[[bin]]
name = "leanrl-bundle"
path = "src/main.rs"

[dependencies]
leanrl_core = { path = "../core" }
clap = { workspace = true, features = ["derive"] }
zip = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
sigstore = []
tpm = [] 